add: add open ai tts

--- a/conf.yaml
+++ b/conf.yaml
@@ -193,12 +193,12 @@ GroqWhisperASR:
 
 # ============== Text to Speech ==============
 TTS_ON: True
-TTS_MODEL: "edgeTTS"
+TTS_MODEL: "openAITTS"
 # text to speech model options: 
 #   "AzureTTS", "pyttsx3TTS", "edgeTTS", "barkTTS", 
 #   "cosyvoiceTTS", "meloTTS", "piperTTS", "coquiTTS",
 #   "fishAPITTS"
-# For ThaiLanguages -> "edegeTTS","SeamlessTTS", "googleTTS"
+# For ThaiLanguages -> "edegeTTS","SeamlessTTS", "googleTTS", "openAITTS"
 
 # if on, whenever the LLM finish a sentence, the model will speak, instead of waiting for the full response
 # if turned on, the timing and order of the facial expression will be more accurate
