--- a/conf.yaml
+++ b/conf.yaml
@@ -35,7 +35,7 @@ ollama:
 vertex:
   PROJECT_ID: "vision-1241"
   LOCATION: "asia-southeast1"
-  MODEL: "gemini-1.5-flash-002"
+  MODEL: "gemini-1.5-pro-002"
 
 # Claude API Configuration
 claude:
